...
                  ItemList.getDefaultEmptyPage(widget.user, widget.unitTest),
              currentUser: widget.user,
            ),
            settings: const RouteSettings(name: ItemList.routeName),
          ));
        },
        child: const Text("Restart"),
      ),
    );
  }

  Container buildBackToHistoryPageButton() {
    return Container(
...
            isReviewStage = false;
            widget.invoiceTime = DateTime.now();
            widget.orderId = Faker().guid.guid();
            postOrder();
          });
        },
        child: CenteredText.getCenteredText("Confirm"),
      ),
    );
  }

  // build go back button
  Container buildGoBackButton() {
...
              showDialog(
                context: context,
                builder: (BuildContext context) => emptyCartErrorPopup(context),
              );
            }
          },
          child: CenteredText.getCenteredText("Review"),
        ));
  }

  /// build total text
  Center buildTotalText() {
    return Center(child: Text("Total: " + widget.total.toStringAsFixed(2)));
...
  }

  // build the card
  Widget buildCard(BuildContext context) {
    int count = widget.getItemCount(widget.item);
    return Container(
      key: const Key("ItemCard"),
      margin: const EdgeInsets.only(top: 8, bottom: 8, left: 8, right: 8),
      width: 480,
      decoration: const BoxDecoration(
          color: CustomColors.cardColor,
          borderRadius: BorderRadius.all(Radius.circular(25))),
      child: Column(
...
            fontWeight: FontWeight.w500,
            decoration: TextDecoration.none));
  }

  Visibility buildPlusIconButton(bool visible) {
    return Visibility(
        key: const Key("PlusButton"),
        visible: visible,
        maintainSize: true,
        maintainAnimation: true,
        maintainState: true,
        child: IconButton(
            onPressed: () => setState(() {
...
