...
                            Icon(
                              Icons.logout,
                              color: Colors.black,
                            ),
                            SizedBox(width: 16),
                            Text(
                              "Log out",
                              style: TextStyle(
                                color: Colors.black,
                                fontSize: 16,
                              ),
                            ),
                          ],
...
