...
                    buildDeleteButton(context, product)
                  ],
                ),
              ),
            ],
            // Key located in Column instead of directly in Container to make integration tests work
            key: const Key("ProductCard")));
  }

  Padding buildEditButton(BuildContext context, Item product) {
    return Padding(
      padding: const EdgeInsets.only(top: 5, left: 40),
      child: Column(
        crossAxisAlignment: CrossAxisAlignment.start,
        children: [
          SizedBox(
              height: 40,
              width: 80,
              child: ElevatedButton(
                key: const Key("DetailsButton"),
                child: const Text('Details'),
                style: ElevatedButton.styleFrom(
                    primary: const Color(0xff161616),
                    shadowColor: Colors.white,
                    shape: const StadiumBorder()),
                onPressed: () {
...
        mainAxisAlignment: MainAxisAlignment.center,
        children: [
          SizedBox(
            height: 40,
            width: 100,
            child: ElevatedButton(
              key: const Key("loadMore"),
              child: const Text('Load More'),
              style: ElevatedButton.styleFrom(
                  primary: const Color(0xff161616),
                  shadowColor: Colors.white,
                  shape: const StadiumBorder()),
              onPressed: () {
...
        mainAxisAlignment: MainAxisAlignment.center,
        children: [
          SizedBox(
            height: 40,
            width: 100,
            child: ElevatedButton(
              child: const Text('Add'),
              style: ElevatedButton.styleFrom(
                  primary: const Color(0xff161616),
                  shadowColor: Colors.white,
                  shape: const StadiumBorder()),
              onPressed: () {
                showDialog(
...
        crossAxisAlignment: CrossAxisAlignment.start,
        children: [
          SizedBox(
            height: 40,
            width: 80,
            child: ElevatedButton(
                key: const Key("DeleteButton"),
                child: const Text('Delete'),
                style: ElevatedButton.styleFrom(
                    primary: Colors.red,
                    shadowColor: Colors.white,
                    shape: const StadiumBorder()),
                onPressed: () =>
...
            Navigator.pushReplacement(
                context,
                MaterialPageRoute(
                    builder: (BuildContext context) =>
                        MerchantPage(currentUser: widget.currentUser)));
          },
          child: const Text('Save'),
        ),
        ElevatedButton(
          style: ElevatedButton.styleFrom(
              primary: Colors.red,
              shadowColor: Colors.white,
              shape: const StadiumBorder()),
          onPressed: () {
            Navigator.of(context).pop();
          },
          child: const Text('Close'),
        ),
      ],
    );
  }

  Column buildEditPopup(Item? item) {
...
